# ASYNC_bookstore_DB

./: .dockerignore  .gitignore  DockerFile  Dockerfile  README.md  bookstore_backup.sql  create_tables.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  test_hash.py
app/: database.py  main.py  models.py  schemas.py
app/Repository/: books.py  users.py
app/dependencies/: auth_dependencies.py  security.py
app/routers/: auth.py  books.py
app/services/: ai.py  ai_prompts.py  auth.py  auth_service.py  books.py
app/utils/: groq_client.py  wrappers.py
backend/: README.md  books.db  pyproject.toml  pyrightconfig.json
backend/app/: main.py  models.py  schemas.py
backend/app/Repository/: books.py  carts.py
backend/app/dependencies/: security.py
backend/app/routers/: books.py  carts.py  chat.py
backend/app/services/: ai.py  ai_prompts.py  books.py  carts.py  chatbot.py
backend/app/utils/: groq_client.py  wrappers.py
backend/tests/: test_books.py
frontend/ui/css/: styles.css
frontend/ui/js/: auth.js  books-ai-recommendations.js  books-ai-search.js  books-ai-summary.js  books-edit.js  books-search.js  books-view.js  books-write.js  cart-ui.js  chatbot.js  common.js  dashboard.js  product.js  profile.js  shop.js
frontend/ui/pages/: books-ai-recommendations.html  books-ai-search.html  books-ai-summary.html  books-edit.html  books-search.html  books-view.html  books-write.html  (+8 more)
groq_chatbot_lib/: setup.py
groq_chatbot_lib/groq_chatbot_lib/: __init__.py  client.py  extractor.py  tools.py  utils.py
tests/: test_auths.py
