[project]
name = "bookstore-db"
version = "0.1.0"
description = ""
authors = [
    {name = "wydfaxil7",email = "a.faazil07@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "sqlalchemy[asyncio] (>=2.0.48,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
